# feedback_project

./: .gitignore  Cargo.toml  README.md  flake.nix
FeedbackDataConnection/: .gitignore  Dockerfile  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
FeedbackDataConnection/gradle/wrapper/: gradle-wrapper.properties
FeedbackDataConnection/src/main/java/: Main.java
feedback_backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  justfile
feedback_backend/src/: main.rs
feedback_data_connection/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
feedback_data_connection/proto/: comm.proto
feedback_data_connection/src/: main.rs
feedback_frontend/: Cargo.toml  index.html  style.css  style.scss  target_uri.txt.example
feedback_frontend/src/: functions.rs  main.rs
feedback_frontend/src/components/: cookie_banner.rs  footer.rs  input.rs  mod.rs  slider.rs  thanks_msg.rs
feedback_input/: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  justfile
feedback_input/html/: DEUTSCHLAND.html  index.html  page.html
feedback_input/proto/: comm.proto
feedback_input/src/: client.rs  main.rs
feedback_input_yew/: .gitignore  Cargo.toml  index.html
feedback_input_yew/src/: main.rs
feedback_review/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  justfile
feedback_review/html/: feedback.html  feedback_li_template.html  index.html  index_li_template.html  version.html
feedback_review/src/: main.rs
feedback_review_backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  justfile
feedback_review_backend/src/: main.rs
feedback_review_frontend/: .gitignore  Cargo.toml  index.html
feedback_review_frontend/src/: functions.rs  main.rs
feedback_review_frontend/src/components/: date.rs  footer.rs  home.rs  mod.rs  not_found.rs  version.rs
