[package]
name = "feedback_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.97"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.40"
