[package]
name = "feedback_data_connection"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
logger_utc = "0.1.9"
tonic = "0.11.0"
prost = "0.12.3"
tokio = {version = "1.36.0", features = ["macros", "rt-multi-thread"]}
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.11.0"
