[package]
name = "feedback_data_connection"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.40.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12.3"
