[package]
name = "feedback_input"
version = "0.2.0"
edition = "2021"

[features]
deutschland = []

[dependencies]
logger_utc = "0.2.0"
rocket = "0.5.1"
urlencoding = "2.1.3"
dotenv = "0.15.0"
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0-beta.3"
anyhow = "1.0.94"

[build-dependencies]
tonic-build = "0.12.3"
